wraps added space for sectionwrapper in a media query to avoid excessive extra space

--- a/src/styles/form.module.scss
+++ b/src/styles/form.module.scss
@@ -90,7 +90,9 @@
 }
 
 .formSection {
-  @include u-margin-y(4);
+  @include at-media('tablet') {
+    @include u-margin-y(4);
+  }
 
   +.formSection {
     @include u-margin-top(5);
